[tool.poetry]
name = "ihm-kivy"
version = "0.1.0"
description = "LogBase"
authors = ["Niort Team"]
readme = "README.md"
package-mode = false  # Ajout de package-mode

[tool.poetry.dependencies]
python = "^3.12"
kivy = "2.3.0"
pandas = ">=2.2"
kivymd = "1.2.0"
matplotlib = "3.9.2"
numpy = "<2.0"
pickle-mixin = "^1.0.2"
kivy-garden = "^0.1.5"
kivy-matplotlib-widget = "^0.13.0"
kivy._clock = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
